CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)
PROJECT(CamelusMips CXX)

SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")

## Project Output Paths
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET(LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

## Add Boost Dependency
SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE(Boost 1.60 REQUIRED COMPONENTS system filesystem)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

## Add OpenGL && GLFW Dependency
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})

## Project Sources
FILE(GLOB_RECURSE PROJECT_LIBS ${Boost_LIBRARIES})
FILE(GLOB_RECURSE PROJECT_SRCS ${MAINFOLDER}/src/*.cpp ${MAINFOLDER}/src/*.hpp)
FILE(GLOB_RECURSE TEST_SRCS ${MAINFOLDER}/test/*.cpp ${MAINFOLDER}/test/*.hpp)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
